@@ -580,4 +580,10 @@ version 16.10
         12 Dec, 2016
         ==bug== menu toggle did not work (since #16.11.1). SVG is now coming from css (base64), not from the html.
         -menu word becomes screen reader text
-        -filter of manduca_search_placeholder of input text in search fiels. 
+        -filter of manduca_search_placeholder of input text in search fiels.
+        
+    commit #16.12.3
+    15 Dec, 2016
+        ==bug== breadcrumb has wrong code when subpage is displayed.
+        - also optimize the breadcrumb function
+        
